<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/totalCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        android:text="@string/totalCountLabel"
        android:paddingTop="@dimen/largePaddingFrame"/>

    <TextView
        android:id="@+id/totalCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zeroValue"
        style="@style/textStyle"
        android:paddingTop="@dimen/standardPaddingFrame"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/correctLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStyle"
                android:text="@string/correctLabel" />

            <TextView
                android:id="@+id/correctText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStyle"
                android:text="@string/zeroValue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/incorrectLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStyle"
                android:text="@string/incorrectLabel" />

            <TextView
                android:id="@+id/incorrectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStyle"
                android:text="@string/zeroValue" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/percentageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zeroPercent"
        style="@style/textStyle"
        android:textSize="48sp"
        android:paddingTop="@dimen/largePaddingFrame" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:paddingTop="@dimen/largePaddingFrame">

        <TextView
            android:id="@+id/firstOperandText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/textStyle"
            android:text="@string/doubleZeroValue" />

        <TextView
            android:id="@+id/operatorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/textStyle"
            android:text="@string/initialOperation" />

        <TextView
            android:id="@+id/secondOperandText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/textStyle"
            android:text="@string/doubleZeroValue" />

        <TextView
            android:id="@+id/equalsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/textStyle"
            android:text="@string/equalSign" />

        <EditText
            android:id="@+id/edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/textStyle"
            android:hint="@string/doubleZeroValue"
            android:maxLength="4"
            android:inputType="numberSigned"/>
    </LinearLayout>

    <Button
        android:id="@+id/checkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:layout_marginTop="@dimen/marginFrame" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginTop="@dimen/marginFrame" />
</LinearLayout>